bug fixes & testing
